--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.nickname.myoji.bughouse">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +14,8 @@
         <activity android:name=".CountActivity" />
         <activity android:name=".LoadActivity" />
         <activity android:name=".ImageViewActivity" />
+        <activity android:name=".ListActivity" />
+        <activity android:name=".DetailActivity" />
         <activity android:name=".launcher.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SaveActivity" />
     </application>
 
 </manifest>
